--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -1,4 +1,22 @@
-<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-<script src = "/players-socket.js"></script>
-<canvas id = "tile-canvas"></canvas>
-<script src="/renderer.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <canvas id = "tileCanvas"></canvas>
+    <canvas id = "color-palette"></canvas>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script src = "../../public/Tile-canvas.js" type="text/javascript"></script>
+    <script src = "../../public/Color-palette.js" type="text/javascript"></script>
+    <script src= "../../public/index.js" type="text/javascript"></script>
+    <script src = "../../public/players-socket.js"></script>
+    <script src="../../public/renderer.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+</body>
+</html>
