--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <canvas id = "tileCanvas"></canvas>
     <canvas id = "color-palette"></canvas>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
@@ -16,7 +19,42 @@
     <script src = "/players-socket.js"></script>
     <script src="/renderer.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1">
+                <div class="color-box color-1"></div>
+                <div class="color-box color-2"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-3"></div>
+                <div class="color-box color-4"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-5"></div>
+                <div class="color-box color-6"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-7"></div>
+                <div class="color-box color-8"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-9"></div>
+                <div class="color-box color-10"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-11"></div>
+                <div class="color-box color-12"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-13"></div>
+                <div class="color-box color-14"></div>
+            </div>
+            <div class="col-md-1">
+                <div class="color-box color-15"></div>
+                <div class="color-box color-16"></div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
