finished socket reception and transmission

--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -22,36 +22,40 @@
     <div class="container">
         <div class="row">
             <div class="col-md-1">
-                <div class="color-box color-1"></div>
-                <div class="color-box color-2"></div>
+                <div class="color-box color-1" onclick="selectColor(this)"></div>
+                <div class="color-box color-2" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-3"></div>
-                <div class="color-box color-4"></div>
+                <div class="color-box color-3" onclick="selectColor(this)"></div>
+                <div class="color-box color-4" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-5"></div>
-                <div class="color-box color-6"></div>
+                <div class="color-box color-5" onclick="selectColor(this)"></div>
+                <div class="color-box color-6" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-7"></div>
-                <div class="color-box color-8"></div>
+                <div class="color-box color-7" onclick="selectColor(this)"></div>
+                <div class="color-box color-8" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-9"></div>
-                <div class="color-box color-10"></div>
+                <div class="color-box color-9" onclick="selectColor(this)"></div>
+                <div class="color-box color-10" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-11"></div>
-                <div class="color-box color-12"></div>
+                <div class="color-box color-11" onclick="selectColor(this)"></div>
+                <div class="color-box color-12" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-13"></div>
-                <div class="color-box color-14"></div>
+                <div class="color-box color-13" onclick="selectColor(this)"></div>
+                <div class="color-box color-14" onclick="selectColor(this)"></div>
             </div>
             <div class="col-md-1">
-                <div class="color-box color-15"></div>
-                <div class="color-box color-16"></div>
+                <div class="color-box color-15" onclick="selectColor(this)"></div>
+                <div class="color-box color-16" onclick="selectColor(this)"></div>
+            </div>
+            <div class="col-1-md-2">
+                <div class="color-box selected-color" id = "selected-color"></div>
+                <button type="button" class="btn btn-primary" onclick = "setColour()">Place</button>
             </div>
         </div>
     </div>
