--- a/public/styles.css
+++ b/public/styles.css
@@ -40,6 +40,7 @@ body {
     height: 100px;
     position: relative;
     display: inline-block;
+    background-color:rgba(255, 255, 255, 1)
 }
 
 .color-1{
