--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+<body>    
     <canvas id = "tileCanvas"></canvas>
-    <canvas id = "color-palette"></canvas>
+    <!-- <canvas id = "color-palette"></canvas> -->
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src = "/Tile-canvas.js" type="text/javascript"></script>
     <script src = "/Color-palette.js" type="text/javascript"></script>
@@ -20,43 +18,41 @@
     <script src="/renderer.js"></script>
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-1">
-                <div class="color-box color-1" onclick="selectColor(this)"></div>
-                <div class="color-box color-2" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-3" onclick="selectColor(this)"></div>
-                <div class="color-box color-4" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-5" onclick="selectColor(this)"></div>
-                <div class="color-box color-6" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-7" onclick="selectColor(this)"></div>
-                <div class="color-box color-8" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-9" onclick="selectColor(this)"></div>
-                <div class="color-box color-10" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-11" onclick="selectColor(this)"></div>
-                <div class="color-box color-12" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-13" onclick="selectColor(this)"></div>
-                <div class="color-box color-14" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-md-1">
-                <div class="color-box color-15" onclick="selectColor(this)"></div>
-                <div class="color-box color-16" onclick="selectColor(this)"></div>
-            </div>
-            <div class="col-1-md-2">
-                <div class="color-box selected-color" id = "selected-color"></div>
-                <button type="button" class="btn btn-primary" onclick = "setColour()">Place</button>
-            </div>
+        <div class="color-palette">
+            <div class="col-1" onclick="selectColor(this)"></div>
+            <div class="col-2" onclick="selectColor(this)"></div>
+            <div class="col-3" onclick="selectColor(this)"></div>
+            <div class="col-4" onclick="selectColor(this)"></div>
+            <div class="col-5" onclick="selectColor(this)"></div>
+            <div class="col-6" onclick="selectColor(this)"></div>
+            <div class="col-7" onclick="selectColor(this)"></div>
+            <div class="col-8" onclick="selectColor(this)"></div>
+            <div class="col-9" onclick="selectColor(this)"></div>
+            <div class="col-10" onclick="selectColor(this)"></div>
+            <div class="col-11" onclick="selectColor(this)"></div>
+            <div class="col-12" onclick="selectColor(this)"></div>
+            <div class="col-13" onclick="selectColor(this)"></div>
+            <div class="col-14" onclick="selectColor(this)"></div>
+            <div class="col-15" onclick="selectColor(this)"></div>
+            <div class="col-16" onclick="selectColor(this)"></div>
+            <div class="col-17" onclick="selectColor(this)"></div>
+            <div class="col-18" onclick="selectColor(this)"></div>
+            <div class="col-19" onclick="selectColor(this)"></div>
+            <div class="col-20" onclick="selectColor(this)"></div>
+            <div class="col-21" onclick="selectColor(this)"></div>
+            <div class="col-22" onclick="selectColor(this)"></div>
+            <div class="col-23" onclick="selectColor(this)"></div>
+            <div class="col-24" onclick="selectColor(this)"></div>
+            <div class="col-25" onclick="selectColor(this)"></div>
+            <div class="col-26" onclick="selectColor(this)"></div>
+            <div class="col-27" onclick="selectColor(this)"></div>
+            <div class="col-28" onclick="selectColor(this)"></div>
+            <div class="col-29" onclick="selectColor(this)"></div>
+            <div class="col-30" onclick="selectColor(this)"></div>
+            <div class="col-31" onclick="selectColor(this)"></div>
+            <div class="col-32" onclick="selectColor(this)"></div>
+            <div class="sel-col" id="selected-color"></div>
+            <button class="custom_btn" onclick="setColour()">Place Tile</div>
         </div>
     </div>
     
