Deleted color-palette canvas, added a login page

--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -2,7 +2,7 @@
 
 <nav>
     <a href = "/">Homepage</a>
-    <a href = "/users/">Login</a>
+    <a href = "/users/login">Login</a>
     <a href = "/users/new">Sign-up</a>
     <a href = "/players/">Players</a>
 </nav>
