--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,6 +1,6 @@
 <h2>Users Index Page</h2>
 <body>
-    <form action = "/users" method = "POST">
+    <form action = "/users/new" method = "POST">
         <label for="username">Name:</label>
         <input type="text" id = "username" name = "username" value="<%= user.name %>" required><br><br>
         <label for="email">E-Mail</label>
