Integrated bootsrap and sass partly with frontend(there still are errors)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,38 @@
-<h2>Index Page</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learning Bootstrap V5 with Sass</title>
+    <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+      <!-- START THE FIRST PART -->
+
+      <section id="home" class="intro-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 intros">
+                    <h1 class="display-2">
+                        <span class="display-2--intro">netsoc r/place</span>
+                        <span class="display-2--description">
+                            The concept of r/place involves placing tiles to create a picture.
+                            Unlike reddit we haven't placed a time limit on placing tiles!
+                        </span>
+                    </h1>
+                    <span class="display-2--login">
+                        <a href="/users/login">
+                            <button type="button" class="btn btn-primary btn-large btn-main">Login</button>
+                        </a>
+                    </span>
+                </div>
+                <div class="col-md-4 image">
+                    <img src="images/netsoc.png" alt="Netsoc Logo Name" width="400" height="400" class="netsoc-logo">
+                </div>
+            </div>
+        </div>
+      </section>
+
+    <script src="./assets/js/bootstrap.bundle.js"></script>
+</body>
+</html>
