--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Learning Bootstrap V5 with Sass</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
 <body>
-    <% if (typeof page === 'undefined') { %>
     <%- include('../partials/headers.ejs')%>
-    <% } %>
     <%- body %>
 </body>
 </html>
