--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -1,8 +1,27 @@
-<h2>r/Place</h2>
-
-<nav>
-    <a href = "/">Homepage</a>
-    <a href = "/users/login">Login</a>
-    <a href = "/users/new">Sign-up</a>
-    <a href = "/players/">Players</a>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-dark menu">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Log-in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contribute</a>
+              </li>
+            </ul>
+            <button type="button" class="rounded-pill btn-rounded">Website</button>
+          </div>
+        </div>
+      </nav>
