--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Bootstrap V5 with Sass</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark menu">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Log-in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contribute</a>
+          </li>
+        </ul>
+        <button type="button" class="rounded-pill btn-rounded">Website</button>
+      </div>
+    </div>
+  </nav>
+
       <!-- START THE FIRST PART -->
 
       <section id="home" class="intro-section">
@@ -32,7 +55,3 @@
             </div>
         </div>
       </section>
-
-    <script src="./assets/js/bootstrap.bundle.js"></script>
-</body>
-</html>
