Fixed database queries and added a bit of security to logging in

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#">Contribute</a>
           </li>
         </ul>
-        <button type="button" class="rounded-pill btn-rounded">Website</button>
+        <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
       </div>
     </div>
   </nav>
