--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,8 +5,8 @@
         <input type="text" id = "username" name = "username" value="<%= user.name %>" required><br><br>
         <label for="email">E-Mail</label>
         <input type="email" id = "email" name = "email" value="<%= user.email %>" required><br><br>
-        <label for="password">Set Password</label>
-        <input type="password" id = "password" name = "password" value="<%= user.password %>" required><br><br>
+        <label for="student_id">Student ID</label>
+        <input type="text" id = "student_id" name = "student_id" value="<%= user.student_number %>" required><br><br>
         <input type="submit" value="Submit">
     </form>
 </body>
