Changed a few styling preferences

--- a/public/scss/_custom.scss
+++ b/public/scss/_custom.scss
@@ -22,6 +22,9 @@ $primary:       $gray-900;
 $secondary:     $netsoc-green;
 $background: $gray-800;
 
+//BACKGROUND COLOUR
+$bg_light: $gray-800;
+
 //ACCORDION OVERRIDES
 $accordion-icon-color:                    $primary;
 $accordion-icon-active-color:             $secondary;
