--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -12,7 +12,6 @@
     <canvas id = "tileCanvas"></canvas>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src = "/Tile-canvas.js" type="text/javascript"></script>
-    <script src = "/Color-palette.js" type="text/javascript"></script>
     <script src= "/index.js" type="text/javascript"></script>
     <script src = "/players-socket.js"></script>
     <script src="/renderer.js"></script>
@@ -54,6 +53,43 @@
             <div class="sel-col" id="selected-color"></div>
             <button class="custom_btn" onclick="setColour()">Place Tile</div>
         </div>
+    </div>
+
+    <div class="warp">
+        <div class="wrapper">
+            <div class="item" onclick= "changeBorder(this)">box-1</div>
+            <div class="item" onclick= "changeBorder(this)">box-2</div>
+            <div class="item" onclick= "changeBorder(this)">box-3</div>
+            <div class="item" onclick= "changeBorder(this)">box-4</div>
+            <div class="item" onclick= "changeBorder(this)">box-5</div>
+            <div class="item" onclick= "changeBorder(this)">box-6</div>
+            <div class="item" onclick= "changeBorder(this)">box-7</div>
+            <div class="item" onclick= "changeBorder(this)">box-8</div>
+            <div class="item" onclick= "changeBorder(this)">box-9</div>
+            <div class="item" onclick= "changeBorder(this)">box-11</div>
+            <div class="item" onclick= "changeBorder(this)">box-12</div>
+            <div class="item" onclick= "changeBorder(this)">box-13</div>
+            <div class="item" onclick= "changeBorder(this)">box-14</div>
+            <div class="item" onclick= "changeBorder(this)">box-15</div>
+            <div class="item" onclick= "changeBorder(this)">box-16</div>
+            <div class="item" onclick= "changeBorder(this)">box-17</div>
+            <div class="item" onclick= "changeBorder(this)">box-18</div>
+            <div class="item" onclick= "changeBorder(this)">box-19</div>
+            <div class="item" onclick= "changeBorder(this)">box-20</div>
+            <div class="item" onclick= "changeBorder(this)">box-21</div>
+            <div class="item" onclick= "changeBorder(this)">box-22</div>
+            <div class="item" onclick= "changeBorder(this)">box-23</div>
+            <div class="item" onclick= "changeBorder(this)">box-24</div>
+            <div class="item" onclick= "changeBorder(this)">box-25</div>
+            <div class="item" onclick= "changeBorder(this)">box-26</div>
+            <div class="item" onclick= "changeBorder(this)">box-27</div>
+            <div class="item" onclick= "changeBorder(this)">box-28</div>
+            <div class="item" onclick= "changeBorder(this)">box-29</div>
+            <div class="item" onclick= "changeBorder(this)">box-30</div>
+            <div class="item" onclick= "changeBorder(this)">box-31</div>
+            <div class="item" onclick= "changeBorder(this)">box-32</div>
+        </div>
+        <button type="button" class="btn">Place tile</button>
     </div>
     
 </body>
