--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,9 @@
+#canvas-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
 body {
     z-index: -1;
     margin: 0px;
@@ -21,12 +27,9 @@ body {
     flex-direction:column;
     justify-content: flex-end; /* Align the container at the bottom */
     align-items: center; /* Center horizontally */
-    transform: translateY(calc(80vh - 20px));
+    /* transform: translateY(calc(80vh - 20px)); */
 }
 
-.warp{
-    visibility: hidden;
-}
 
 .color-palette {
     display: grid;
@@ -221,54 +224,4 @@ body {
     width: 875px;
     height: 50px;
     background-color:aliceblue;
-}
-
-@media (max-width: 576px) {
-    .container{
-        visibility: hidden;
-    }
-    
-    .warp{
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        width: 100%;
-        bottom: 50px;
-        align-items: center;
-        
-    }
-    
-    .btn{
-        position: absolute;
-        width: 100%;
-        height: 50px;
-    }
-    
-    .wrapper{
-        max-height: 120px;
-        border: 1px solid black;
-        display: flex;
-        flex-direction: row;
-        overflow-x: auto;
-        position: absolute;
-        width: 100%;
-        bottom: 10px;
-        padding: 0px;
-        margin: 0px;
-    }
-    
-    .wrapper::-webkit-scrollbar{
-        width: 0px;
-    }
-    
-    .wrapper .item{
-        min-width: 110px;
-        height: 110px;
-        line-height: 110px;
-        text-align: center;
-        background-color: beige;
-        margin-right: 2px;
-        margin-bottom: 0px;
-        padding-bottom: 0px;
-    }
 }
