--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>    
-    <canvas id = "tileCanvas"></canvas>
+    <div id="canvas-container"><canvas id = "tileCanvas"></canvas></div>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src = "/Tile-canvas.js" type="text/javascript"></script>
-    <script src = "/Color-palette.js" type="text/javascript"></script>
     <script src= "/index.js" type="text/javascript"></script>
     <script src = "/players-socket.js"></script>
     <script src="/renderer.js"></script>
