--- a/public/styles.css
+++ b/public/styles.css
@@ -22,14 +22,18 @@ body {
     border-radius: 10px;
 }
 
-.container{
+.container {
     display: flex;
-    flex-direction:column;
-    justify-content: flex-end; /* Align the container at the bottom */
-    align-items: center; /* Center horizontally */
-    /* transform: translateY(calc(80vh - 20px)); */
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    max-width: 100%;
+    position: absolute; /* Change from fixed to absolute */
+    bottom: -188px; /* Add this to position it at the bottom */
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: translateX(30%);
+    bottom: 30px;
 }
-
 
 .color-palette {
     display: grid;
@@ -52,162 +56,162 @@ body {
 
 .col-1 {
     grid-area: col-1;
-    background-color: #ff5733;
+    background-color: rgba(109, 0, 26, 1);
 }
 
 .col-2 {
     grid-area: col-2;
-    background-color: #33ff57;
+    background-color: rgba(190, 0, 57, 1);
 }
 
 .col-3 {
     grid-area: col-3;
-    background-color: #5733ff;
+    background-color: rgba(255, 69, 0, 1);
 }
 
 .col-4 {
     grid-area: col-4;
-    background-color: #ffd933;
+    background-color: rgba(255, 168, 0, 1);
 }
 
 .col-5 {
     grid-area: col-5;
-    background-color: #33d9ff;
+    background-color: rgba(255, 214, 53, 1);
 }
 
 .col-6 {
     grid-area: col-6;
-    background-color: #ff33d9;
+    background-color: rgba(255, 248, 184, 1);
 }
 
 .col-7 {
     grid-area: col-7;
-    background-color: #ff33d9;
+    background-color: rgba(0, 163, 104, 1);
 }
 
 .col-8 {
     grid-area: col-8;
-    background-color: #ff33d9;
+    background-color: rgba(0, 204, 120, 1);
 }
 
 .col-9 {
     grid-area: col-9;
-    background-color: #ff33d9;
+    background-color: rgba(126, 237, 86, 1);
 }
 
 .col-10 {
     grid-area: col-10;
-    background-color: #ff33d9;
+    background-color: rgba(0, 117, 111, 1);
 }
 
 .col-11 {
     grid-area: col-11;
-    background-color: #ff33d9;
+    background-color: rgba(0, 158, 170, 1);
 }
 
 .col-12 {
     grid-area: col-12;
-    background-color: #ff33d9;
+    background-color: rgba(0, 204, 192, 1);
 }
 
 .col-13 {
     grid-area: col-13;
-    background-color: #ff33d9;
+    background-color: rgba(36, 80, 164, 1);
 }
 
 .col-14 {
     grid-area: col-14;
-    background-color: #ff33d9;
+    background-color: rgba(54, 144, 234, 1);
 }
 
 .col-15 {
     grid-area: col-15;
-    background-color: #ff33d9;
+    background-color: rgba(81, 233, 244, 1);
 }
 
 .col-16 {
     grid-area: col-16;
-    background-color: #ff33d9;
+    background-color: rgba(73, 58, 193, 1);
 }
 
 .col-17 {
     grid-area: col-17;
-    background-color: #ff33d9;
+    background-color: rgba(106, 92, 255, 1);
 }
 
 .col-18 {
     grid-area: col-18;
-    background-color: #ff33d9;
+    background-color: rgba(148, 179, 255, 1);
 }
 
 .col-19 {
     grid-area: col-19;
-    background-color: #ff33d9;
+    background-color: rgba(129, 30, 159, 1);
 }
 
 .col-20 {
     grid-area: col-20;
-    background-color: #ff33d9;
+    background-color: rgba(180, 74, 192, 1);
 }
 
 .col-21 {
     grid-area: col-21;
-    background-color: #ff33d9;
+    background-color: rgba(228, 171, 255, 1);
 }
 
 .col-22 {
     grid-area: col-22;
-    background-color: #ff33d9;
+    background-color: rgba(222, 16, 127, 1);
 }
 
 .col-23 {
     grid-area: col-23;
-    background-color: #ff33d9;
+    background-color: rgba(255, 56, 129, 1);
 }
 
 .col-24 {
     grid-area: col-24;
-    background-color: #ff33d9;
+    background-color: rgba(255, 153, 170, 1);
 }
 
 .col-25 {
     grid-area: col-25;
-    background-color: #ff33d9;
+    background-color: rgba(109, 72, 47, 1);
 }
 
 .col-26 {
     grid-area: col-26;
-    background-color: #ff33d9;
+    background-color: rgba(156, 105, 38, 1);
 }
 
 .col-27 {
     grid-area: col-27;
-    background-color: #ff33d9;
+    background-color: rgba(255, 180, 112, 1);
 }
 
 .col-28 {
     grid-area: col-28;
-    background-color: #ff33d9;
+    background-color: rgba(0, 0, 0, 1);
 }
 
 .col-29 {
     grid-area: col-29;
-    background-color: #ff33d9;
+    background-color: rgba(81, 82, 82, 1);
 }
 
 .col-30 {
     grid-area: col-30;
-    background-color: #ff33d9;
+    background-color: rgba(137, 141, 144, 1);
 }
 
 .col-31 {
     grid-area: col-31;
-    background-color: #ff33d9;
+    background-color: rgba(212, 215, 217, 1);
 }
 
 .col-32 {
     grid-area: col-32;
-    background-color: #ff33d9;
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .sel-col {
@@ -219,9 +223,231 @@ body {
     width: 50px;
 }
 
-.custom_btn{
+.custom_btn {
     grid-area: custom-btn;
-    width: 875px;
+    width: 100%; /* Ensure the button spans the entire container width */
     height: 50px;
-    background-color:aliceblue;
+    background-color: aliceblue;
+}
+
+.warp{
+    display: none;
+}
+
+@media (max-width: 1180px){
+    .container{
+        display: none;
+    }
+    .color-palette{
+        display: none;
+    }
+
+    .warp{
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        height: 2%;
+        bottom: 43px;
+        align-items: center;
+        
+    }
+    
+    .btn{
+        position: absolute;
+        width: 100%;
+        height: 50px;
+    }
+    
+    .wrapper{
+        height: 100px;
+        border: 1px solid black;
+        display: flex;
+        flex-direction: row;
+        overflow-x: auto;
+        position: absolute;
+        width: 100%;
+        bottom: 10px;
+        padding: 0px;
+        margin: -32px;
+    }
+    
+    .wrapper::-webkit-scrollbar{
+        width: 0px;
+    }
+    
+    .wrapper > *{
+        min-width: 70px;
+        height: 70px;
+        line-height: 110px;
+        text-align: center;
+        background-color: beige;
+        margin-right: 2px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+        outline: black solid 0px;
+    }
+
+    .wrapper > .col-1 {
+        grid-area: col-1;
+        background-color: rgba(109, 0, 26, 1);
+    }
+    
+    .wrapper > .col-2 {
+        grid-area: col-2;
+        background-color: rgba(190, 0, 57, 1);
+    }
+    
+    .wrapper > .col-3 {
+        grid-area: col-3;
+        background-color: rgba(255, 69, 0, 1);
+    }
+    
+    .wrapper > .col-4 {
+        grid-area: col-4;
+        background-color: rgba(255, 168, 0, 1);
+    }
+    
+    .wrapper > .col-5 {
+        grid-area: col-5;
+        background-color: rgba(255, 214, 53, 1);
+    }
+    
+    .wrapper > .col-6 {
+        grid-area: col-6;
+        background-color: rgba(255, 248, 184, 1);
+    }
+    
+    .wrapper > .col-7 {
+        grid-area: col-7;
+        background-color: rgba(0, 163, 104, 1);
+    }
+    
+    .wrapper > .col-8 {
+        grid-area: col-8;
+        background-color: rgba(0, 204, 120, 1);
+    }
+    
+    .wrapper > .col-9 {
+        grid-area: col-9;
+        background-color: rgba(126, 237, 86, 1);
+    }
+    
+    .wrapper > .col-10 {
+        grid-area: col-10;
+        background-color: rgba(0, 117, 111, 1);
+    }
+    
+    .wrapper > .col-11 {
+        grid-area: col-11;
+        background-color: rgba(0, 158, 170, 1);
+    }
+    
+    .wrapper > .col-12 {
+        grid-area: col-12;
+        background-color: rgba(0, 204, 192, 1);
+    }
+    
+    .wrapper > .col-13 {
+        grid-area: col-13;
+        background-color: rgba(36, 80, 164, 1);
+    }
+    
+    .wrapper > .col-14 {
+        grid-area: col-14;
+        background-color: rgba(54, 144, 234, 1);
+    }
+    
+    .wrapper > .col-15 {
+        grid-area: col-15;
+        background-color: rgba(81, 233, 244, 1);
+    }
+    
+    .wrapper > .col-16 {
+        grid-area: col-16;
+        background-color: rgba(73, 58, 193, 1);
+    }
+    
+    .wrapper > .col-17 {
+        grid-area: col-17;
+        background-color: rgba(106, 92, 255, 1);
+    }
+    
+    .wrapper > .col-18 {
+        grid-area: col-18;
+        background-color: rgba(148, 179, 255, 1);
+    }
+    
+    .wrapper > .col-19 {
+        grid-area: col-19;
+        background-color: rgba(129, 30, 159, 1);
+    }
+    
+    .wrapper > .col-20 {
+        grid-area: col-20;
+        background-color: rgba(180, 74, 192, 1);
+    }
+    
+    .wrapper > .col-21 {
+        grid-area: col-21;
+        background-color: rgba(228, 171, 255, 1);
+    }
+    
+    .wrapper > .col-22 {
+        grid-area: col-22;
+        background-color: rgba(222, 16, 127, 1);
+    }
+    
+    .wrapper > .col-23 {
+        grid-area: col-23;
+        background-color: rgba(255, 56, 129, 1);
+    }
+    
+    .wrapper > .col-24 {
+        grid-area: col-24;
+        background-color: rgba(255, 153, 170, 1);
+    }
+    
+    .wrapper > .col-25 {
+        grid-area: col-25;
+        background-color: rgba(109, 72, 47, 1);
+    }
+    
+    .wrapper > .col-26 {
+        grid-area: col-26;
+        background-color: rgba(156, 105, 38, 1);
+    }
+    
+    .wrapper > .col-27 {
+        grid-area: col-27;
+        background-color: rgba(255, 180, 112, 1);
+    }
+    
+    .wrapper > .col-28 {
+        grid-area: col-28;
+        background-color: rgba(0, 0, 0, 1);
+    }
+    
+    .wrapper > .col-29 {
+        grid-area: col-29;
+        background-color: rgba(81, 82, 82, 1);
+    }
+    
+    .wrapper > .col-30 {
+        grid-area: col-30;
+        background-color: rgba(137, 141, 144, 1);
+    }
+    
+    .wrapper > .col-31 {
+        grid-area: col-31;
+        background-color: rgba(212, 215, 217, 1);
+    }
+    
+    .wrapper > .col-32 {
+        grid-area: col-32;
+        background-color: rgba(255, 255, 255, 1);
+    }
+    
+    
 }
