--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>    
@@ -14,6 +14,7 @@
     <script src= "/index.js" type="text/javascript"></script>
     <script src = "/players-socket.js"></script>
     <script src="/renderer.js"></script>
+
 
     <div class="container">
         <div class="color-palette">
@@ -53,6 +54,47 @@
             <button class="custom_btn" onclick="setColour()">Place Tile</div>
         </div>
     </div>
+
+    </div>
+
+    <div class="warp">
+        <div class="wrapper">
+            <div class="col-1" onclick= "select_color_mobile(this)"></div>
+            <div class="col-2" onclick= "select_color_mobile(this)"></div>
+            <div class="col-3" onclick= "select_color_mobile(this)"></div>
+            <div class="col-4" onclick= "select_color_mobile(this)"></div>
+            <div class="col-5" onclick= "select_color_mobile(this)"></div>
+            <div class="col-6" onclick= "select_color_mobile(this)"></div>
+            <div class="col-7" onclick= "select_color_mobile(this)"></div>
+            <div class="col-8" onclick= "select_color_mobile(this)"></div>
+            <div class="col-9" onclick= "select_color_mobile(this)"></div>
+            <div class="col-10" onclick= "select_color_mobile(this)"></div>
+            <div class="col-11" onclick= "select_color_mobile(this)"></div>
+            <div class="col-12" onclick= "select_color_mobile(this)"></div>
+            <div class="col-13" onclick= "select_color_mobile(this)"></div>
+            <div class="col-14" onclick= "select_color_mobile(this)"></div>
+            <div class="col-15" onclick= "select_color_mobile(this)"></div>
+            <div class="col-16" onclick= "select_color_mobile(this)"></div>
+            <div class="col-17" onclick= "select_color_mobile(this)"></div>
+            <div class="col-18" onclick= "select_color_mobile(this)"></div>
+            <div class="col-19" onclick= "select_color_mobile(this)"></div>
+            <div class="col-20" onclick= "select_color_mobile(this)"></div>
+            <div class="col-21" onclick= "select_color_mobile(this)"></div>
+            <div class="col-22" onclick= "select_color_mobile(this)"></div>
+            <div class="col-23" onclick= "select_color_mobile(this)"></div>
+            <div class="col-24" onclick= "select_color_mobile(this)"></div>
+            <div class="col-25" onclick= "select_color_mobile(this)"></div>
+            <div class="col-26" onclick= "select_color_mobile(this)"></div>
+            <div class="col-27" onclick= "select_color_mobile(this)"></div>
+            <div class="col-28" onclick= "select_color_mobile(this)"></div>
+            <div class="col-29" onclick= "select_color_mobile(this)"></div>
+            <div class="col-30" onclick= "select_color_mobile(this)"></div>
+            <div class="col-31" onclick= "select_color_mobile(this)"></div>
+            <div class="col-32" onclick= "select_color_mobile(this)"></div>
+        </div>
+        <button type="button" class="btn" onclick="setColour()">Place tile</button>
+    </div>
+
     
 </body>
 </html>
