--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -39,7 +39,7 @@
                 <div class="form-group--login">
                   <label for="student_id" class="col-form-label" placeholder="Student ID">Student ID</label><br>
                   <div>
-                    <input type="text" class="form-control" id="student_id" placeholder="Student ID" name="student_id" value="<%= user.student_number %>" requried>
+                    <input type="text" class="form-control" id="student_id" placeholder="Student ID" name="student_id" value="<%= user.student_number %>" required>
                   </div>
                 </div>
                 <div class="form-group--login">
@@ -54,3 +54,7 @@
               </form>
         </div>
       </section>
+
+      <!-- Include Bootstrap JavaScript and jQuery -->
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
