--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -58,7 +58,7 @@
     </div>
 
     <div class="warp">
-        <div class="wrapper">
+        <div class="wrapper" id="palette-wrapper">
             <div class="col-1" onclick= "select_color_mobile(this)"></div>
             <div class="col-2" onclick= "select_color_mobile(this)"></div>
             <div class="col-3" onclick= "select_color_mobile(this)"></div>
