--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,10 +13,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Info</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Log-in</a>
