Added 2 new pages

--- a/views/users/info.ejs
+++ b/views/users/info.ejs
@@ -29,3 +29,36 @@
       </div>
     </div>
   </nav>
+
+      <!-- START THE FIRST PART -->
+
+      <section id="home" class="info-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 intros">
+                    <h1 class="display-2">
+                        <span class="display-2--intro">Information</span>
+                        <span class="display-2--description">
+                            r/place was originally created by Reddit to bring together people to collaborate and create beautful artwork.
+                            Now you can do the same with friends or by yourself here! Make sure to register yourself to Netsoc, to create
+                            some beautiful tile-based art!
+                        </span>
+                    </h1>
+                    <br><br>
+                    <p class="display-2">
+                        <span class="display-2--description">
+                            Happy Freshers! 🥳🥳🥳
+                        </span>
+                    </p>
+                    <br><br><br><br><br>
+                </div>
+                <div class="col-md-4 image">
+                    <img src="http://localhost:3000/images/netsoc.png" alt="Netsoc Logo Name" width="400" height="400" class="netsoc-logo">
+                </div>
+            </div>
+        </div>
+      </section>
+  
+      <!-- Include Bootstrap JavaScript and jQuery -->
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
