--- a/public/scss/components/_typography.scss
+++ b/public/scss/components/_typography.scss
@@ -26,6 +26,14 @@
         font-size: 50px;
     }
 
+    &--contribute{
+        display: inline-block;
+        font-weight: 500;
+        color: beige;
+        margin-top: 120px;
+        font-size: 50px;
+    }
+
 }
 
 .login-form{
