--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Learning Bootstrap V5 with Sass</title>
+        <title>netsoc: r/place</title>
     </head>
 <body>
     <%- body %>
