--- a/views/users/contribute.ejs
+++ b/views/users/contribute.ejs
@@ -29,3 +29,30 @@
       </div>
     </div>
   </nav>
+
+      <!-- START THE FIRST PART -->
+
+      <section id="home" class="info-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 intros">
+                    <h1 class="display-2">
+                        <span class="display-2--intro">Contribute</span>
+                        <span class="display-2--description">
+                            No piece of software is without imperfections and this is no exception. If you liked enjoying this
+                            and would like to contribute, you can! This code has been made open-source and is open to your contribution.
+                            Feel free to pull.
+                        </span>
+                        <span class="display-2--contribute">
+                            <button type="button" class="btn btn-primary btn-large btn-main--login">Github</button>
+                        </span>
+                    </h1>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+      </section>
+  
+      <!-- Include Bootstrap JavaScript and jQuery -->
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
