Changed some styling preferences

--- a/public/scss/sections/_info-section.scss
+++ b/public/scss/sections/_info-section.scss
@@ -5,5 +5,5 @@
     height: 100%;
     background-color: $background;
     font-weight: 500;
-    padding-bottom: 100px;
+    overflow-y: hidden;
 }
