--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -16,13 +16,13 @@
           <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Info</a>
+          <a class="nav-link" href="http://localhost:3000/users/info">Info</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log-in</a>
+          <a class="nav-link" href="http://localhost:3000/users/login">Log-in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contribute</a>
+          <a class="nav-link" href="http://localhost:3000/users/contribute">Contribute</a>
         </li>
       </ul>
       <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
