--- a/public/scss/sections/_intro-section.scss
+++ b/public/scss/sections/_intro-section.scss
@@ -6,6 +6,7 @@
     background-color: $background;
     font-weight: 500;
     padding-bottom: 100px;
+    overflow-y: hidden;
 }
 
 .login-section{
@@ -13,7 +14,7 @@
     height: 100%;
     background-color: $background;
     padding-top: 50px;
-    padding-bottom: 100%;
+    overflow-y: hidden;
 }
 
 
