--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark menu">
@@ -13,16 +13,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="http://localhost:3000/users/info">Info</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log-in</a>
+          <a class="nav-link" href="http://localhost:3000/users/login">Log-in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contribute</a>
+          <a class="nav-link" href="http://localhost:3000/users/contribute">Contribute</a>
         </li>
       </ul>
       <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
