--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>netsoc: r/place</title>
     </head>
-<body>
+<body style="background-color: #343a40">
     <%- body %>
 </body>
 </html>
