--- a/views/users/contribute.ejs
+++ b/views/users/contribute.ejs
@@ -1,34 +1,34 @@
 <head>
-    <link rel="stylesheet" href="/assets/css/style.css">
-  </head>
-  
-  <nav class="navbar navbar-expand-lg navbar-dark menu">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Info</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log-in</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contribute</a>
-          </li>
-        </ul>
-        <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
-      </div>
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+
+<nav class="navbar navbar-expand-lg navbar-dark menu">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="../images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://localhost:3000/users/info">Info</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://localhost:3000/users/login">Log-in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://localhost:3000/users/contribute">Contribute</a>
+        </li>
+      </ul>
+      <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
     </div>
-  </nav>
+  </div>
+</nav>
 
       <!-- START THE FIRST PART -->
 
