--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,7 +1,7 @@
 <h2>Users Index Page</h2>
 <body>
-    <form action = "/users/new" method = "POST">
-        <label for="username">Name:</label>
+    <form action = "/users/OpgWhnFN3mJrd6ygOblV/new" method = "POST">
+        <label for="username">Username:</label>
         <input type="text" id = "username" name = "username" value="<%= user.name %>" required><br><br>
         <label for="email">E-Mail</label>
         <input type="email" id = "email" name = "email" value="<%= user.email %>" required><br><br>
