--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,1 +1,59 @@
-<h2>User Index</h2>
+<head>
+    <link rel="stylesheet" href="/assets/css/style.css">
+  </head>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark menu">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="../images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="http://localhost:3000/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost:3000/users/info">Info</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost:3000/users/login">Log-in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost:3000/users/contribute">Contribute</a>
+          </li>
+        </ul>
+        <a href="https://netsoc.com/"><button type="button" class="rounded-pill btn-rounded">Website</button></a>
+      </div>
+    </div>
+  </nav>
+  
+  
+        <!-- START THE OPTIONS PART -->
+  
+        <section id="login-section" class="login-section">
+          <div class="login-form container">
+              <h2 class="display-2--login">Options</h2>
+              <form>
+                  <div class="form-group--login">
+                      </label><br>
+                    <div>
+                      <a href="/players/"><button type="button" class="btn btn-primary btn-large btn-main--login">Play</button></a>
+                    </div>
+                  </div>
+                </form>
+                <form action="/users/logout" method="POST">
+                    <div class="form-group--login">
+                      <div>
+                          <button type="submit" class="btn btn-primary btn-large btn-main--login">Log-out</button>
+                        </div>
+                    </div>
+                  </form>
+          </div>
+        </section>
+  
+        <!-- Include Bootstrap JavaScript and jQuery -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
