made admin auth a bit stronger

--- a/views/admin/options.ejs
+++ b/views/admin/options.ejs
@@ -1,4 +1,4 @@
-<a href="/users/new"><button type="button">Register new user</button></a>
+<a href="/admin/new"><button type="button">Register new user</button></a>
 <a href="/players/"><button type="button">Edit the canvas</button></a>
 <form action="/admin/logout" method="POST">
     <input type="submit" value="Logout">
